{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 938,
  "lineage": "41460ba0-0cf8-c4e1-dd8e-00b60e922d43",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "kafka_rest_proxy_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/kafka-rest-proxy-ingress",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/rewrite-target": "/$2",
                  "nginx.ingress.kubernetes.io/use-regex": "true"
                },
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "kafka-rest-proxy-ingress",
                "namespace": "default",
                "resource_version": "532",
                "uid": "026b9f74-9718-4ab7-981d-51d29974e8f4"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "localhost",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "kafka-rest-proxy",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8082
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/kafka-rest-proxy(/|$)(.*)",
                            "path_type": "ImplementationSpecific"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "kiali",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 20001
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/kiali(/|$)(.*)",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": false
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "keycloak_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/keycloak-ingress",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "keycloak-ingress",
                "namespace": "default",
                "resource_version": "531",
                "uid": "891fc276-e403-456d-b4de-3f6149740994"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "localhost",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "keycloak",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8080
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/keycloak",
                            "path_type": "ImplementationSpecific"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "mm-kafka",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 9092
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/kafka",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": false
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "istio_service_mesh",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "istio-service-mesh",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "istio-injection": "true"
                },
                "name": "istio-service-mesh",
                "resource_version": "530",
                "uid": "215a1f26-4afb-4215-a663-def7b96845db"
              }
            ],
            "wait_for_default_service_account": false
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "istio_system",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "istio-system",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "istio-injection": "true"
                },
                "name": "istio-system",
                "resource_version": "527",
                "uid": "87568446-1aba-484f-b9e6-a18bb9bdfa15"
              }
            ],
            "wait_for_default_service_account": false
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "opa_istio_service_mesh",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "opa-istio",
            "metadata": [
              {
                "generation": 0,
                "name": "opa-istio",
                "resource_version": "528",
                "uid": "fc0923f5-dc29-44ff-98af-b4730e73da0e"
              }
            ],
            "wait_for_default_service_account": false
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "admission_controller",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "opa-istio/admission-controller",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "admission-controller"
                },
                "name": "admission-controller",
                "namespace": "opa-istio",
                "resource_version": "554",
                "uid": "15c5d21a-15a9-423c-a06b-a78692da73bd"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.96.186.214",
                "cluster_ips": [
                  "10.96.186.214"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "https",
                    "node_port": 0,
                    "port": 443,
                    "protocol": "TCP",
                    "target_port": "8443"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "admission-controller"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "kafka_rest_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/kafka-rest-proxy",
            "metadata": [
              {
                "generation": 0,
                "name": "kafka-rest-proxy",
                "namespace": "default",
                "resource_version": "568",
                "uid": "0291599c-5d3d-4d95-b9e1-231e1a193967"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.96.74.208",
                "cluster_ips": [
                  "10.96.74.208"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 8082,
                    "protocol": "TCP",
                    "target_port": "8082"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "kafka-rest-proxy"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "keycloak",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/keycloak",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "keycloak"
                },
                "name": "keycloak",
                "namespace": "default",
                "resource_version": "533",
                "uid": "84ee5c8d-6f4f-448a-8072-8f9005505dad"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.96.37.10",
                "cluster_ips": [
                  "10.96.37.10"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 0,
                    "port": 8080,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "keycloak"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          }
        }
      ]
    }
  ]
}